# phat-doinks

./: .gitignore  README.md  pyproject.toml
defaults/: categories.toml  config.toml
src/meme_sorter/: __init__.py  __main__.py  classifier.py  cli.py  config.py  core.py  events.py  gui.py  media.py  models.py  prompt.py  state.py
tests/: conftest.py  test_state.py
