[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phat-doinks"
version = "1.0.0"
description = "Sort your meme collection using local AI vision models"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "Pillow>=9.0",
    "rich>=13.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
claude = ["anthropic>=0.40"]
nsfw = ["opennsfw2"]
dev = ["pytest", "ruff"]

[project.scripts]
phat-doinks = "meme_sorter.cli:main"
meme-sorter = "meme_sorter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meme_sorter = ["../../defaults/*.toml", "../../assets/*"]
